--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'form' %>
 
 <div class="btn-group">
-    <%= link_to 'Laat zien', @event, class: "btn btn-default" %>
-    <%= link_to 'Terug', events_path, class: "btn btn-default" %>
+    <%= link_to 'Laat zien', @event, class: 'btn btn-default' %>
+    <%= link_to 'Terug', events_path, class: 'btn btn-default' %>
 </div>
