--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,11 +8,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to 'HAMERS', root_path, class: 'navbar-brand', id: "logo" %>
+        <%= link_to 'HAMERS', root_path, class: 'navbar-brand', id: 'logo' %>
       </div>
       <div class="collapse navbar-collapse" id="navigationbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to 'Home', root_path %></li>
           <% PublicPage.all.each do |pp| %>
               <% if pp.public %>
                   <li><%= link_to pp.title, "/#{pp.title}" %></li>
@@ -63,5 +63,4 @@
       </div>
     </div>
   </nav>
-  </div>
 </header>
