--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'form' %>
 
 <div class="btn-group">
-    <%= link_to 'Show', @meeting, class: "btn btn-default" %>
-    <%= link_to 'Back', meetings_path, class: "btn btn-default" %>
+    <%= link_to 'Show', @meeting, class: 'btn btn-default' %>
+    <%= link_to 'Back', meetings_path, class: 'btn btn-default' %>
 </div>
