--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -20,4 +20,4 @@
   <%= @news.date %>
 </p>
 <%= link_to 'Edit', edit_news_path(@news) %> |
-<%= link_to 'Terug', news_index_path, class: "btn btn-default" %>
+<%= link_to 'Terug', news_index_path, class: 'btn btn-default' %>
