--- a/app/views/users/usergroups.html.erb
+++ b/app/views/users/usergroups.html.erb
@@ -1,5 +1,6 @@
 <% if current_user.admin? %>
     <h1>Groepen</h1>
+    <ul>
     <% @usergroups.each do |group| %>
         <li>
           <% if @user.in_group?(group) %>
@@ -7,13 +8,13 @@
                            html: { method: :delete }) do |f| %>
                   <%= f.hidden_field :group_id %>
                   <%= f.hidden_field :user_id %>
-                  <%= group.name %> | <%= f.submit "remove" %>
+                  <%= group.name %> | <%= f.submit 'remove' %>
               <% end %>
           <% else %>
               <%= form_for(@user.groups.new(group_id: group.id, user_id: @user.id)) do |f| %>
                   <%= f.hidden_field :group_id %>
                   <%= f.hidden_field :user_id %>
-                  <%= group.name %> | <%= f.submit "add" %>
+                  <%= group.name %> | <%= f.submit 'add' %>
               <% end %>
           <% end %>
         </li>
