--- a/app/assets/stylesheets/news.css.scss
+++ b/app/assets/stylesheets/news.css.scss
@@ -63,10 +63,9 @@ padding-left:160px;
   top: 26px;
   right: -15px;
   display: inline-block;
-  border-top: 15px solid transparent;
-  border-left: 15px solid #ccc;
-  border-right: 0 solid #ccc;
-  border-bottom: 15px solid transparent;
+  border: 15px solid transparent;
+  border-right: 0 #ccc;
+  border-left-color: #ccc;
   content: " ";
 }
 .timeline > li > .timeline-panel:after {
@@ -74,10 +73,9 @@ padding-left:160px;
   top: 27px;
   right: -14px;
   display: inline-block;
-  border-top: 14px solid transparent;
-  border-left: 14px solid #fff;
-  border-right: 0 solid #fff;
-  border-bottom: 14px solid transparent;
+  border: 14px solid transparent;
+  border-right: 0 #fff;
+  border-left-color: #fff;
   content: " ";
 }
 .timeline > li > .timeline-badge {
@@ -93,10 +91,7 @@ padding-left:160px;
   margin-left: -25px;
   background-color: #999999;
   z-index: 100;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
+  border-radius: 50%;
 }
 .timeline > a > li > .timeline-badge {
   color: #fff;
@@ -111,10 +106,7 @@ padding-left:160px;
   margin-left: -25px;
   background-color: #999999;
   z-index: 100;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
+  border-radius: 50%;
 }
 .timeline > li.timeline-inverted > .timeline-panel {
   float: right;
