--- a/app/views/api_keys/show.html.erb
+++ b/app/views/api_keys/show.html.erb
@@ -1,5 +1,5 @@
 <center><img alt="Embedded Image" src="<%= @key %>" /></center>
-<br \><br \>
+<br><br>
 <table>
   <thead>
   <tr>
@@ -10,7 +10,7 @@
   <tbody>
   <% @logs.each do |l| %>
       <tr>
-        <td><%= l.ip_addr%> / <%= l.created_at.strftime("%d/%m/%Y %H:%m") %></td>
+        <td><%= l.ip_addr%> / <%= l.created_at.strftime('%d/%m/%Y %H:%m') %></td>
         <td><%= l.resource_call %></td>
       </tr>
   <% end %>
