--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@beer) do |f| %>
   <% if @beer.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@beer.errors.count, "error") %> prohibited this beer from being saved:</h2>
+      <h2><%= pluralize(@beer.errors.count, 'error') %> prohibited this beer from being saved:</h2>
 
       <ul>
       <% @beer.errors.full_messages.each do |msg| %>
@@ -13,33 +13,33 @@
 
   <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :picture %><br>
-    <%= f.text_field :picture, class: "form-control" %>
+    <%= f.text_field :picture, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :soort %><br>
-    <%= f.text_field :soort, class: "form-control" %>
+    <%= f.text_field :soort, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :percentage %>
-    <%= f.text_field :percentage, class: "form-control" %>
+    <%= f.text_field :percentage, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :brewer %>
-    <%= f.text_field :brewer, class: "form-control" %>
+    <%= f.text_field :brewer, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :country %>
-    <%= f.text_field :country, class: "form-control" %>
+    <%= f.text_field :country, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :URL %>
-    <%= f.text_field :URL, class: "form-control" %>
+    <%= f.text_field :URL, class: 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit :Verstuur, class: "btn btn-primary" %>
+    <%= f.submit :Verstuur, class: 'btn btn-primary' %>
   </div>
 <% end %>
