--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Terug', beers_path, :class => "btn btn-default" %>
+<%= link_to 'Terug', beers_path, :class => 'btn btn-default' %>
