--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -20,14 +20,14 @@
   <tbody>
   <% @meetings.each do |m| %>
       <tr>
-        <td><%= m.date.strftime("%d/%m/%Y") %></td>
+        <td><%= m.date.strftime('%d/%m/%Y') %></td>
         <td><%= link_to m.onderwerp, m %></td>
         <% if current_user.admin? %>
             <td>
               <div class="btn-group">
-                <%= link_to "Wijzig", edit_meeting_path(m), class: "btn btn-info" %>
-                <%= link_to "Verwijder", m, class: "btn btn-danger", method: :delete,
-                            data: { confirm: "Weet je het zeker?" } %>
+                <%= link_to 'Wijzig', edit_meeting_path(m), class: 'btn btn-info' %>
+                <%= link_to 'Verwijder', m, class: 'btn btn-danger', method: :delete,
+                            data: { confirm: 'Weet je het zeker?'} %>
               </div>
             </td>
         <% end %>
@@ -37,5 +37,5 @@
 </table>
 <%= will_paginate %>
 <% if current_user.admin? %>
-    <%= link_to "Add vergadering", new_meeting_path, class: "btn btn-block btn-primary" %>
+    <%= link_to 'Add vergadering', new_meeting_path, class: 'btn btn-block btn-primary' %>
 <% end %>
