--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', meetings_path, class: "btn btn-default" %>
+<%= link_to 'Back', meetings_path, class: 'btn btn-default' %>
