--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -1,13 +1,13 @@
 <%	motions = [
-        ["Motie van niet chill", "niet chill"],
-        ["Motie van vet arelaxed", "vet arelaxed"],
-        ["Motie van duurt lang", "duurt lang"]
+        ['Motie van niet chill', 'niet chill'],
+        ['Motie van vet arelaxed', 'vet arelaxed'],
+        ['Motie van duurt lang', 'duurt lang']
 ]
 %>
 <%= form_for(@motion) do |f| %>
     <% if @motion.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(@motion.errors.count, "error") %> prohibited this motion from being saved:</h2>
+          <h2><%= pluralize(@motion.errors.count, 'error') %> prohibited this motion from being saved:</h2>
           <ul>
             <% @motion.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
@@ -16,15 +16,15 @@
         </div>
     <% end %>
     <div class="form-group">
-      <%= f.select :motion_type, options_for_select(motions), {}, {class: "form-control"} %>
+      <%= f.select :motion_type, options_for_select(motions), {}, {class: 'form-control'} %>
     </div>
     <div class="form-group">
-      <%= f.text_field :subject, placeholder: "Wat is er stuk?", class: "form-control" %>
+      <%= f.text_field :subject, placeholder: 'Wat is er stuk?', class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.text_area :content, placeholder: "Huilie huilie in dit veld.", class: "form-control" %>
+      <%= f.text_area :content, placeholder: 'Huilie huilie in dit veld.', class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.submit :Verstuur, class: "btn btn-primary" %>
+      <%= f.submit :Verstuur, class: 'btn btn-primary' %>
     </div>
 <% end %>
