--- a/app/views/motions/new.html.erb
+++ b/app/views/motions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', request.referer, :class => "btn btn-default" %>
+<%= link_to 'Back', request.referer, :class => 'btn btn-default' %>
