--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'form' %>
 
 <div class="btn-group">
-  <%= link_to 'Show', @news, class: "btn btn-default" %>
-  <%= link_to 'Terug', news_index_path, class: "btn btn-default" %>
+  <%= link_to 'Show', @news, class: 'btn btn-default' %>
+  <%= link_to 'Terug', news_index_path, class: 'btn btn-default' %>
 </div>
