--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -7,14 +7,14 @@
     <% end %>
     <br /><br />
     <% @news.each do |n| %>
-        <% if n.cat != "e" %>
+        <% if n.cat != 'e' %>
             <li class="timeline-inverted">
         <% else %>
             <li>
         <% end %>
-        <% if n.cat == "d" %>
+        <% if n.cat == 'd' %>
             <div class="timeline-badge danger"></div>
-        <% elsif n.cat == "e" %>
+        <% elsif n.cat == 'e' %>
             <div class="timeline-badge info"></div>
         <% else %>
             <div class="timeline-badge success"></div>
@@ -22,8 +22,8 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h4 class="timeline-title"><%= n.title %></h4>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <%= time_ago_in_words(n.created_at) %> ago. (<%= n.created_at.strftime("%-d/%-m/%y %H:%M") %>)<% if current_user.admin? %> | <%= link_to "edit", edit_news_path(n) %> | <%= link_to "delete", n, method: :delete,
-                                                                                                                                                                                                                                                                      data: { confirm: "Weet je het zeker?" },
+            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <%= time_ago_in_words(n.created_at) %> ago. (<%= n.created_at.strftime('%-d/%-m/%y %H:%M') %>)<% if current_user.admin? %> | <%= link_to 'edit', edit_news_path(n) %> | <%= link_to 'delete', n, method: :delete,
+                                                                                                                                                                                                                                                                      data: { confirm: 'Weet je het zeker?'},
                                                                                                                                                                                                                                                                       title: n.title %> <% end %></small></p>
           </div>
           <div class="timeline-body">
