--- a/app/views/public_pages/_form.html.erb
+++ b/app/views/public_pages/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@public_page) do |f| %>
   <% if @public_page.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@public_page.errors.count, "error") %> prohibited this public_page from being saved:</h2>
+      <h2><%= pluralize(@public_page.errors.count, 'error') %> prohibited this public_page from being saved:</h2>
 
       <ul>
       <% @public_page.errors.full_messages.each do |msg| %>
