--- a/app/views/pushes/new.html.erb
+++ b/app/views/pushes/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Terug', pushes_path, class: "btn btn-default" %>
+<%= link_to 'Terug', pushes_path, class: 'btn btn-default' %>
