--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,17 +1,17 @@
 <%= form_for(@review) do |f| %>
     <div class="form-group">
-      <%= f.text_area :description, class: "form-control", placeholder: "Wat vonden we ervan?" %>
+      <%= f.text_area :description, class: 'form-control', placeholder: 'Wat vonden we ervan?' %>
     </div>
     <div class="form-group">
       <%= f.label :rating %>
-      <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, class: "form-control" %>
+      <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, class: 'form-control' %>
       <%= f.label :proefdatum %><br>
-      <%= f.date_select :proefdatum, {}, class: "form-control date-select" %>
+      <%= f.date_select :proefdatum, {}, class: 'form-control date-select' %>
       <%= f.hidden_field :user_id %>
       <%= f.hidden_field :beer_id %>
     </div>
     <div class="actions">
-      <%= f.submit :Verstuur, class: "btn btn-primary" %>
-      <%= link_to 'Terug', @review.beer, class: "btn btn-default" %>
+      <%= f.submit :Verstuur, class: 'btn btn-primary' %>
+      <%= link_to 'Terug', @review.beer, class: 'btn btn-default' %>
     </div>
 <% end %>
