--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -8,8 +8,8 @@
     <%= form_for(@group) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
         <div class="form-group">
-          <%= f.text_field :name, placeholder: "Groep", class: "form-control" %>
-          <%= f.submit "Create", class: "btn btn-large btn-primary" %>
+          <%= f.text_field :name, placeholder: 'Groep', class: 'form-control' %>
+          <%= f.submit 'Create', class: 'btn btn-large btn-primary' %>
         </div>
     <% end %>
 <% end %>
