--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,9 +9,9 @@
         <%= f.text_field :email %>
         <%= f.label :password %>
         <%= f.password_field :password %>
-        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.label :password_confirmation, 'Confirmation' %>
         <%= f.password_field :password_confirmation %>
-        <%= f.submit "Maak account", class: "btn btn-large btn-primary" %>
+        <%= f.submit 'Maak account', class: 'btn btn-large btn-primary' %>
     <% end %>
   </div>
 </div>
