--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,44 +1,48 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
-  <aside class="col-md-8">
+  <div class="col-md-12 text-center">
+    <h1><%= @beer.name %></h1>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-8">
     <% @beer.reviews.each do |r| %>
-        <section>
-          <p class="lead"><%= link_to User.find(r.user_id).name, User.find(r.user_id) %> zei over dit bier: </p>
+        <div class="review">
+          <h4><%= link_to User.find(r.user_id).name, User.find(r.user_id) %> zei over dit bier: </h4>
+
           <p><i><%= simple_format(r.description) %></i></p>
-          <p>Dit biertje kreeg een <i><%= r.rating %></i> en is geproefd op
+
+          <p>
+            Dit biertje kreeg een <i><%= r.rating %></i> en is geproefd op
             <i><%= r.proefdatum.strftime('%d-%m-%Y') %></i>
-            <% if current_user == User.find(r.user_id) || current_user.admin? %>
+          </p>
+
+          <% if current_user == User.find(r.user_id) || current_user.admin? %>
               <div class="btn-group pull-right">
                 <%= link_to edit_review_path(r), class: 'btn btn-default btn-sm' do %>
                     <i class="fa fa-pencil"></i>
                 <% end %>
                 <% if current_user.admin? %>
-                    <%= link_to r,
-                                method: :delete,
-                                data: {confirm: 'Weet je het zeker?'},
-                                class: 'btn btn-default btn-sm' do %>
+                    <%= link_to r, method: :delete, data: {confirm: 'Weet je het zeker?'}, class: 'btn btn-default btn-sm' do %>
                         <i class="fa fa-trash"></i>
                     <% end %>
                 <% end %>
               </div>
           <% end %>
-          </p>
-        </section>
+        </div>
+        <div class="clearfix"></div>
+        <hr>
     <% end %>
-  </aside>
+  </div>
   <div class="col-md-4">
-    <div class="row">
-      <div class="col-sm-12">
+    <div class="panel panel-default">
+      <div class="panel-body">
         <% if @beer.picture? %>
             <%= image_tag(@beer.picture, :class => 'img img-responsive') %>
         <% else %>
             <img src="http://placehold.it/500x500&text=Geen foto" class="img img-responsive">
         <% end %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        &nbsp;
         <table class="table table-hover">
           <tr>
             <td>Naam:</td>
