--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -2,10 +2,10 @@
   <ul class="timeline">
     <%= link_to new_news_path do %>
         <li>
-          <div class="timeline-badge"><i class="glyphicon glyphicon-plus"></i></div>
+          <div class="timeline-badge"><i class="fa fa-plus"></i></div>
         </li>
     <% end %>
-    <br /><br />
+    <br/><br/>
     <% @news.each do |n| %>
         <% if n.cat != 'e' %>
             <li class="timeline-inverted">
@@ -21,10 +21,24 @@
         <% end %>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h4 class="timeline-title"><%= n.title %></h4>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <%= time_ago_in_words(n.created_at) %> ago. (<%= n.created_at.strftime('%-d/%-m/%y %H:%M') %>)<% if current_user.admin? %> | <%= link_to 'edit', edit_news_path(n) %> | <%= link_to 'delete', n, method: :delete,
-                                                                                                                                                                                                                                                                      data: { confirm: 'Weet je het zeker?'},
-                                                                                                                                                                                                                                                                      title: n.title %> <% end %></small></p>
+            <h4 class="timeline-title">
+              <%= n.title %>
+              <% if current_user.admin? %>
+                  <div class="btn-group">
+                    <%= link_to edit_news_path(n), class: 'btn btn-default btn-sm' do %>
+                        <i class="fa fa-pencil"></i>
+                    <% end %>
+                    <%= link_to n, method: :delete, data: {confirm: 'Weet je het zeker?'}, title: n.title, class: 'btn btn-default btn-sm' do %>
+                        <i class="fa fa-trash"></i>
+                    <% end %>
+                  </div>
+              <% end %></h4>
+            <p>
+              <small class="text-muted">
+                <i class="fa fa-clock-o"></i>
+                <%= time_ago_in_words(n.created_at) %> ago. (<%= n.created_at.strftime('%-d-%-m-%y %H:%M') %>)
+              </small>
+            </p>
           </div>
           <div class="timeline-body">
             <p><%= n.body %></p>
