--- a/app/views/static_pages/statistics.html.erb
+++ b/app/views/static_pages/statistics.html.erb
@@ -1,21 +1,26 @@
-<h1> Statistieken </h1>
 <div class="row">
-  <div class="col-md-6">
-    <h2> Aantal reviews </h2>
-    <%= line_chart  @cumulativeReviewData %>
+  <div class="col-md-12 text-center">
+    <h1>Statistieken</h1>
   </div>
-  <div class="col-md-6">
-    <h2> Aantal biertjes </h2> 
-    <%= line_chart  @cumulativeBeerData %>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-6 text-center">
+    <h2> Aantal reviews </h2>
+    <%= line_chart @cumulativeReviewData %>
+  </div>
+  <div class="col-md-6 text-center">
+    <h3> Aantal biertjes </h3>
+    <%= line_chart @cumulativeBeerData %>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 text-center">
     <h2> Aantal quotes </h2>
-    <%= line_chart  @cumulativeQuoteData %>
+    <%= line_chart @cumulativeQuoteData %>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 text-center">
     <h2> Aantal activiteiten </h2>
-    <%= line_chart  @cumulativeEventData %>
+    <%= line_chart @cumulativeEventData %>
   </div>
 </div>
