--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -37,6 +37,8 @@
           <%= f.text_field :name, class: "form-control" %>
           <%= f.label :email, "Email" %>
           <%= f.text_field :email, class: "form-control" %>
+          <%= f.label :batch, "Lichting" %>
+          <%= f.number_field :batch, class: "form-control" %>
           <%= f.label :password, "Wachtwoord" %>
           <%= f.password_field :password, class: "form-control" %>
           <%= f.label :password_confirmation, "Herhaal wachtwoord" %>
