--- a/app/views/users/index_public.html.erb
+++ b/app/views/users/index_public.html.erb
@@ -1,4 +1,9 @@
-<h1> Leden </h1>
+<div class="row">
+  <div class="col-md-12 text-center">
+    <h1>Leden</h1>
+  </div>
+</div>
+
 <% @groupedUsers.each do |group| %>
   <div class='row'>
     <% if group[0] != nil %>
