--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Bekijk de publieke leden pagina", public_leden_path, class: 'btn btn-primary' %>
+
 <div class="row">
   <div class="col-md-12 text-center">
     <h1>Leden</h1>
