--- a/app/views/users/index_public.html.erb
+++ b/app/views/users/index_public.html.erb
@@ -21,7 +21,7 @@
                 <div class="panel">
                   <div class="panel-body">
                     <%= gravatar_for user, size: 150 %>
-                    <%= user.name %> <%= "(Aspirant)" if user.adlid? %>
+                    <%= user.name %> <%= "(Aspirant)" if user.alid? %>
                   </div>
                 </div>
               </div>
