--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
         </button>
         <a href="#" class="pull-left" style="padding-top: 5px; padding-left: 5px; ">
-          <img src="/assets/logo_transparant_background_small.png">
+          <img src=<%= image_path("logo_transparant_background_small.png") %>>
         </a>
 
         <%= link_to 'HAMERS', root_path, class: 'navbar-brand', id: 'logo' %>
