--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#" class="pull-left" style="padding-top: 5px; padding-left: 5px; ">
+        <a href="#" class="pull-left navbar-brand" style="margin-top: -8px">
           <img src=<%= image_path("logo_transparant_background_small.png") %>>
         </a>
 
