--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -3,7 +3,7 @@
     <div class="form-group">
       <%= f.text_area :text, placeholder: 'Wat zei die lul?', class: 'form-control' %>
     </div>
-      <div class="form-group btn-group bootstrap-select dropdown">
+      <div id="user-selector" class="form-group btn-group bootstrap-select dropdown">
         <% users_array = User.all.map { |user| [user.name, user.id] } %>
         <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker' %>
       </div>
