--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -192,7 +192,7 @@ input {
 }
 
 /* other */
-.gravatar {
+section .gravatar {
   float: left;
   margin-right: 10px;
 }
@@ -220,4 +220,10 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 
 table.events thead tr th, table.tablesorter tfoot tr th {
   background-color: #e6EEEE;
+}
+
+.thumbnail-member {
+  text-align: center;
+  border: none;
+  transition: none;
 }
