--- a/app/views/users/index_public.html.erb
+++ b/app/views/users/index_public.html.erb
@@ -1,35 +1,36 @@
-<%=link_to "Bekijk de interne leden pagina", users_path, class: 'btn btn-primary' if signed_in?%>
+<%= link_to "Bekijk de interne leden pagina", users_path, class: 'btn btn-primary' if signed_in? %>
 <div class="row">
   <div class="col-md-12 text-center">
     <h1>Leden</h1>
   </div>
 </div>
 <hr>
-
-<% @groupedUsers.each do |group| %>
-  <div class='row'>
-    <% if group[0] %>
-      <div class="panel panel-success">
-        <div class="panel-heading">
-          <h3 class="panel-title">
-            <%= group[0] == 0 ? "Oprichters" : "Lichting " + group[0].to_s %> </div>
-          </h3>
-          <div class="panel-body">
-          <% group[1].each do |user| %>
-            <div>
-              <div class="col-md-4 col-sm-6">
-                <div class="panel">
-                  <div class="panel-body">
-                    <%= gravatar_for user, size: 150 %>
-                    <%= user.name %> <%= "(Aspirant)" if user.alid? %>
-                  </div>
-                </div>
+<div class="col-md-12">
+  <% @groupedUsers.each do |group| %>
+      <div class='row'>
+        <% if group[0] %>
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <h1 class="panel-title text-center">
+                  <%= group[0] == 0 ? 'Oprichters' : 'Lichting ' + group[0].to_s %>
+                </h1>
+              </div>
+              <div class="panel-body">
+                <% group[1].each do |user| %>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                      <div class="thumbnail thumbnail-member">
+                        <%= gravatar_for user, size: 150, class: 'img img-responsive' %>
+                        <div class="caption">
+                          <h4>
+                            <%= user.name %> <%= '(Aspirant)' if user.alid? %>
+                          </h4>
+                        </div>
+                      </div>
+                    </div>
+                <% end %>
               </div>
             </div>
-          <% end %> 
-        </div>
+        <% end %>
       </div>
-    <% end %>
-  </div>
-<% end %>
-
+  <% end %>
+</div>
