--- a/app/views/shared/_random_quote.html.erb
+++ b/app/views/shared/_random_quote.html.erb
@@ -1,4 +1,4 @@
-<%= link_to gravatar_for(@rQuote.user), @rQuote.user %>
+<%= link_to gravatar_for(@rQuote.user), @rQuote.user, class: 'gravatar img img-responsive' %>
 <span class="user">
    <%= link_to @rQuote.user.name, @rQuote.user %>
 </span>
