--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,5 +1,5 @@
 <li id="<%= feed_item.id %>">
-  <%= link_to gravatar_for(feed_item.user), feed_item.user %>
+  <%= link_to gravatar_for(feed_item.user), feed_item.user, class: 'gravatar img img-responsive' %>
   <span class="user">
    <%= link_to feed_item.user.name_with_nickname, feed_item.user %>
   </span>
