--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,4 @@
-<%= link_to gravatar_for(current_user, size: 96), current_user %>
+<%= link_to gravatar_for(current_user, size: 96), current_user, class: 'gravatar img img-responsive' %>
 <h1>
   <%= current_user.name %>
 </h1>
