--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <%= render 'layouts/header' %>
 <div class="container">
   <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
+      <div class="alert alert-<%= key %> text-center" role="alert" ><%= value %></div>
   <% end %>
   <%= yield %>
   <%= render 'layouts/footer' %>
