Make use of content_for to generalize the website layout (just the title for now)

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Biertjes</h1>
+<% content_for :title do %>
+    Bieren
+<% end %>
+
 <table id="bier" class="tablesorter table table-hover">
   <thead>
   <tr>
