--- a/app/views/beers/reviews.html.erb
+++ b/app/views/beers/reviews.html.erb
@@ -1,12 +1,14 @@
-<%= form_for(@beer.reviews.build(user_id: current_user.id, beer_id: @beer.id)) do |f| %>
+<% content_for :title do %>
+    Nieuwe review
+<% end %>
+
+<%= bootstrap_form_for(@beer.reviews.build(user_id: current_user.id, beer_id: @beer.id)) do |f| %>
     <div class="form-group">
       <%= f.text_area :description, placeholder: 'Wat vonden we ervan?', class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.label :rating %>
       <%= f.select :rating, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], class: 'form-control' %>
       <div class="form-group">
-        <%= f.label :proefdatum, 'Proefdatum' %>
         <%= f.date_select :proefdatum %>
       </div>
       <%= f.hidden_field :user_id %>
