--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,6 @@
-<div class="row">
-  <div class="col-md-12 text-center">
-    <h1>Activiteiten</h1>
-  </div>
-</div>
-<hr>
+<% content_for :title do %>
+    Activiteiten
+<% end %>
 <div class="row">
   <div class="col-md-12">
     <table class="events table table-hover">
