--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>Editing meeting</h1>
-
+<% content_for :title do %>
+    Vergadering bewerken
+<% end %>
 <%= render 'form' %>
 
 <div class="btn-group">
