--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+    Vergaderingen
+<% end %>
 <script type="text/javascript">
     $(document).ready(function()
             {
@@ -5,7 +8,6 @@
             }
     );
 </script>
-<h1>Vergaderingen</h1>
 <table id="meeting" class="tablesorter table table-hover">
   <thead>
   <tr>
