--- a/app/views/motions/new.html.erb
+++ b/app/views/motions/new.html.erb
@@ -1,5 +1,10 @@
-<h1>Motie Indienen</h1>
+<% content_for :title do %>
+    Motie indienen
+<% end %>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <%= render 'form' %>
+    <%= link_to 'Back', request.referer, :class => 'btn btn-default' %>
+  </div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', request.referer, :class => 'btn btn-default' %>
