--- a/app/views/public_pages/new.html.erb
+++ b/app/views/public_pages/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New public_page</h1>
+<% content_for :title do %>
+    Nieuwe openbare pagina
+<% end %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', public_pages_path %>
+<%= link_to 'Back', public_pages_path, class: 'btn btn-primary btn-block' %>
