--- a/app/views/quotes/edit.html.erb
+++ b/app/views/quotes/edit.html.erb
@@ -1,4 +1,6 @@
-<h1> Edit quote </h1>
+<<% content_for :title do %>
+    Quote aanpassen
+<% end %>
 <%= form_for(@quote) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <%= f.label :text %>
