--- a/app/views/static_pages/statistics.html.erb
+++ b/app/views/static_pages/statistics.html.erb
@@ -1,9 +1,6 @@
-<div class="row">
-  <div class="col-md-12 text-center">
-    <h1>Statistieken</h1>
-  </div>
-</div>
-<hr>
+<<% content_for :title do %>
+    Statistieken
+<% end %>
 <div class="row">
   <div class="col-md-6 text-center">
     <h2> Aantal reviews </h2>
