--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,7 @@
-<%= link_to "Bekijk de publieke leden pagina", public_leden_path, class: 'btn btn-primary' %>
-
-<div class="row">
-  <div class="col-md-12 text-center">
-    <h1>Leden</h1>
-  </div>
-</div>
-<hr>
+<% content_for :title do %>
+    Leden
+<% end %>
+<%= link_to 'Bekijk de publieke leden pagina', public_leden_path, class: 'btn btn-primary' %>
 <div class="row">
   <div class="col-md-12">
     <table id="user" class="tablesorter table table-hover">
