--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Registreren</h1>
+<% content_for :title do %>
+    Registeren
+<% end %>
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
