Glyphicons removed, display picture of random beer

--- a/app/views/shared/_news_item.html.erb
+++ b/app/views/shared/_news_item.html.erb
@@ -2,7 +2,7 @@
   <%= link_to new_news_path do %>
       <li>
         <div class="timeline-badge">
-          <i class="glyphicon glyphicon-plus"></i>
+          <i class="fa fa-plus"></i>
         </div>
       </li>
   <% end %>
