--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,6 +46,7 @@
                     <ul class="dropdown-menu">
                       <li><%= link_to 'Push', new_push_path %></li>
                       <li><%= link_to 'Groepen', groups_path %></li>
+                      <li><%= link_to 'Notes', notes_path %></li>
                       <li><%= link_to 'Moties', motions_path %></li>
                       <li><%= link_to 'Openbare Paginas', public_pages_path %></li>
                       <li><%= link_to 'Download DB', dbdump_path %></li>
