--- a/app/views/public_pages/_form.html.erb
+++ b/app/views/public_pages/_form.html.erb
@@ -21,6 +21,6 @@
       <%= f.check_box :public %>
     </div>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit 'Openbare pagina toevoegen', :class => 'btn btn-primary' %>
     </div>
 <% end %>
