--- a/app/views/public_pages/new.html.erb
+++ b/app/views/public_pages/new.html.erb
@@ -4,4 +4,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', public_pages_path, class: 'btn btn-primary btn-block' %>
+<%= link_to 'Terug', public_pages_path, class: 'btn btn-default btn-block' %>
