--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -2,11 +2,10 @@
     Vergaderingen
 <% end %>
 <script type="text/javascript">
-    $(document).ready(function()
-            {
-                $("#meeting").tablesorter();
-            }
-    );
+  $(document).ready(function () {
+        $("#meeting").tablesorter();
+      }
+  );
 </script>
 <table id="meeting" class="tablesorter table table-hover">
   <thead>
@@ -27,9 +26,12 @@
         <% if current_user.admin? %>
             <td>
               <div class="btn-group">
-                <%= link_to 'Wijzig', edit_meeting_path(m), class: 'btn btn-info' %>
-                <%= link_to 'Verwijder', m, class: 'btn btn-danger', method: :delete,
-                            data: { confirm: 'Weet je het zeker?'} %>
+                <%= link_to edit_meeting_path(m), class: 'btn btn-info' do %>
+                    <i class="fa fa-pencil"></i>
+                <% end %>
+                <%= link_to m, class: 'btn btn-danger', method: :delete, data: {confirm: 'Weet je het zeker?'} do %>
+                    <i class="fa fa-trash"></i>
+                <% end %>
               </div>
             </td>
         <% end %>
