--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,12 +1,12 @@
-<p id="notice"><%= notice %></p>
-
 <%= content_for :title do %>
-	<%= @note.title %>
+    <%= @note.title %>
 <% end %>
 
 <p>
   <%= simple_format @note.content %>
-	</p>
+</p>
 
-<%= link_to 'Edit', edit_note_path(@note) %> |
-<%= link_to 'Back', notes_path %>
+<div class="btn-group">
+  <%= link_to 'Edit', edit_note_path(@note), class: 'btn btn-primary' %>
+  <%= link_to 'Back', notes_path, class: 'btn btn-default' %>
+</div>
