--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -2,13 +2,11 @@
     Openbare pagina's
 <% end %>
 <script type="text/javascript">
-    $(document).ready(function()
-            {
-                $("#pages").tablesorter();
-            }
-    );
+  $(document).ready(function () {
+        $("#pages").tablesorter();
+      }
+  );
 </script>
-<h1>Openbare Paginas</h1>
 <table id="pages" class="tablesorter table table-hover">
   <thead>
   <tr>
@@ -25,9 +23,12 @@
         <td><%= link_to m.title, '/' + m.title %></td>
         <td>
           <div class="btn-group">
-            <%= link_to 'Wijzig', edit_public_page_path(m), class: 'btn btn-info' %>
-            <%= link_to 'Verwijder', m, class: 'btn btn-danger', method: :delete,
-                        data: { confirm: 'Weet je het zeker?'} %>
+            <%= link_to edit_public_page_path(m), class: 'btn btn-info' do %>
+                <i class="fa fa-pencil"></i>
+            <% end %>
+            <%= link_to m, class: 'btn btn-danger', method: :delete, data: {confirm: 'Weet je het zeker?'} do %>
+                <i class="fa fa-trash"></i>
+            <% end %>
           </div>
         </td>
       </tr>
@@ -35,4 +36,4 @@
   </tbody>
 </table>
 <%= will_paginate %>
-<%= link_to 'Add Pagina', new_public_page_path, class: 'btn btn-primary btn-block' %>
+<%= link_to 'Voeg openbare pagina toe', new_public_page_path, class: 'btn btn-primary btn-block' %>
