--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,6 +32,7 @@
                   <li><%= link_to 'Leden', users_path %></li>
                   <li><%= link_to 'Activiteiten', events_path %></li>
                   <li><%= link_to 'Vergaderingen', meetings_path %></li>
+                  <li><%= link_to 'Foto\'s', photo_path %></li>
                   <li><%= link_to 'Motie', new_motion_path %></li>
                   <li><%= link_to 'Nieuws', news_index_path %></li>
                   <li><%= link_to 'Bier', beers_path %></li>
