--- a/app/views/api_keys/show.html.erb
+++ b/app/views/api_keys/show.html.erb
@@ -1,5 +1,18 @@
+<script>
+function copyToClipboard(element) {
+	var $temp = $("<input>");
+	$("body").append($temp);
+  $temp.val(element).select();
+  document.execCommand("copy");
+	$temp.remove();
+	}
+</script>
+
+<a href="#" onclick='copyToClipboard("<%= @rawkey %>");'>
+
 <center><img alt="Embedded Image" src="<%= @key %>" /></center>
-<br><br>
+
+</a><br><br>
 <table>
   <thead>
   <tr>
