--- a/app/views/stickers/index.html.erb
+++ b/app/views/stickers/index.html.erb
@@ -16,7 +16,7 @@ function initMap() {
 	<% end %>
 	var map = new google.maps.Map(document.getElementById('map'), {
 zoom: 4,
-center: "Enschede"
+center: { lat: 52.14, lng: 6.53 }
 });
 
 
