--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -62,6 +62,7 @@
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to 'Mijn Profiel', current_user %></li>
+                  <li><%= link_to 'Mijn Stickers', personal_sticker_path %></li>
                   <li><%= link_to 'Instellingen', edit_user_path(current_user) %></li>
                   <li class="divider"></li>
                   <li>
